--- a/src/sass/_shoppingCart.scss
+++ b/src/sass/_shoppingCart.scss
@@ -25,7 +25,7 @@
   // right: -380px; 
   // top: 0;
   width: 350px;
-  height: 100vh;
+  height: 560px;
   // background-color: rgb(225, 226, 138);
   // background-color:rgb(114, 156, 114);
   // background-color:rgb(149, 194, 149);
